cambios en Css y paginas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="grilla">
         <header class="header">
             <div class="header-logo">
-                <img src="./logoPS/psano fondo naranja.png" width="80%">
+                <img src="./logoPS/psano fondo naranja.png" width="100%">
 
             </div>
             <div class="header-titulo">
@@ -28,10 +28,11 @@
 
 
             <nav class="flex-nav">
-                <li class="secos"><a href="./pag/secos.html"> Secos</a></li>
-                <li class="art"><a href="./pag/artesanales.html">Artesanales</a></li>
-                <li class="enva"><a href="./pag/envasado.html">Envasado</a></li>
-                <li class="natu"><a href="./pag/naturales.html">Naturales</a></li>
+                <div class="home"><a href="./index.html"></a>Home</div>
+                <div class="art"><a href="./pag/artesanales.html">Artesanales</a></div>
+                <div class="produc"><a href="./pag/productos.html"> Productos</a></div>
+                <div class="recet"><a href="./pag/recetas.html">Recetas</a></div>
+                <div class="natu"><a href="./pag/naturales.html">Naturales</a></div>
             </nav>
 
             <div class="main2">
@@ -67,6 +68,7 @@
                             a
                             mantener un estilo de vida equilibrado y lleno de energía. Todas nuestras recetas están
                             cuidadosamente seleccionadas para garantizar su calidad y sabor.</p>
+                            <h3>Te mostramos algunas</h3>
                     </div>
                 </section>
 
@@ -74,7 +76,7 @@
                 <div class="mermeladas"><img src="./img/img 3 mermeladas.jpeg" alt=" Mermeladas" width="50%"></div>
                 <div class="muecas"><img src="./img/img 3 muecas.jpeg" alt="Barritas de cereal MUECAS " width="50%">
                 </div>
-                <div class="secos"><img src="./img/Img frutos secos.jpeg" alt=" Frutos Secos" width="50%"></div> 
+                <div class="secos"><img src="./img/Img frutos secos.jpeg" alt=" Frutos Secos" width="50%"></div>
 
 
             </div>
@@ -82,7 +84,19 @@
         </main>
 
 
-        <footer class="footer" >
+        <footer class="footer">
+            <div class="contacto">
+                <h3>Contactos</h3>
+                <p>whatsAap 02216237628</p>
+                <p>instagram @PuntoSanotienda</p>
+                <p>facebook PuntoSanotienda</p>
+            </div>
+            <div class="pagos">
+                <h3>Medios de Pagos</h3>
+                <p> -Transferencia/Efectivo 10% de DESCUENTO</p>
+                <p>-Tarjeta de credito hasta 3 cuotas sin interes</p>
+                <p>-Debito</p>
+            </div>
             <div class="mapa">
                 <figure><iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52343.07030763407!2d-57.98818985717279!3d-34.92045289881356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e62b1f0085a1%3A0xbcfc44f0547312e3!2sLa%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1679170383415!5m2!1ses!2sar"
@@ -91,18 +105,7 @@
                 <figcaption>La Plata</figcaption>
             </div>
 
-            <div class="contacto">
-                <h3>contactos</h3>
-                <h4>whatsap 2214895656</h4>
-                <h4>instagram PuntoSanotienda</h4>
-                <h4>facebook PuntoSanotienda</h4>
-            </div>
-            <div class="pagos">
-                <h3>Medios de Pago</h3>
-                <h4> -Transferencia/Efectivo 10% de DESCUENTO</h4>
-                <h4>-Tarjeta de credito hasta 3 cuotas sin interes</h4>
-                <h4>-Debito</h4>
-            </div>
+
         </footer>
 
 
