--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="art"><a href="./pag/artesanales.html">Artesanales</a></div>
                 <div class="produc"><a href="./pag/productos.html"> Productos</a></div>
                 <div class="recet"><a href="./pag/recetas.html">Recetas</a></div>
-                <div class="natu"><a href="./pag/naturales.html">Naturales</a></div>
+                <div class="natu"><a href="./pag/desayunos.html">Desayunos</a></div>
             </nav>
 
             <div class="main2">
