--- a/pag/artesanales.html
+++ b/pag/artesanales.html
@@ -31,7 +31,7 @@
                 <div class="art"><a href="./artesanales.html"></a>Artesanales</div>
                 <div class="produc"><a href="./productos.html"> Productos</a></div>
                 <div class="recet"><a href="./recetas.html">Recetas</a></div>
-                <div class="natu"><a href="./pag/naturales.html">Naturales</a></div>
+                <div class="natu"><a href="../pag/desayunos.html">Desayunos</a></div>
             </nav>
             <div class="main-art">
                 <section>
