--- a/pag/desayunos.html
+++ b/pag/desayunos.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styls.css">
-    <title>Document</title>
+    <title>PuntoSano</title>
 </head>
 
 <body>
-    <div class="grilla-producto">
+    <div class="grilla-desayuno">
         <header class="header">
             <div class="header-logo">
-                <img src="../logoPS/logo con fondo.png" width="100%">
+                <img src="../logoPS/psano fondo naranja.png" width="100%">
 
             </div>
             <div class="header-titulo">
@@ -23,23 +23,31 @@
 
         </header>
 
-        <main class="main-produc">
-            <nav class="flex-navproduc">
+        <main class="main-desayuno">
+            <nav class="flex-nav">
                 <div class="index"><a href="../index.html">Home</a></div>
                 <div class="produc"><a href="./productos.html">Productos</a></div>
                 <div class="art"><a href="./artesanales.html">Artesanales</a></div>
                 <div class="recet"><a href="./recetas.html">Recetas</a></div>
-                <div class="natu"><a href="../pag/desayunos.html">Desayunos</a></div>
+                <div class="natu"><a href="./desayunos.html">Desayunos</a></div>
             </nav>
 
-            <div class="lis-pro"> LISTA DE PRODUCTOS</div>
-            
-            <div class="listado">
-                <div class="varios"><img src="../lista de productos/5.jpeg" width="50%" alt=""></div>
-                <div class="congelados"><img src="../lista de productos/2.jpeg" width="50%" alt=""></div>
-                <div class="cereales"><img src="../lista de productos/3.jpeg" width="50%" alt=""></div>
-                <div class="dulces"><img src="../lista de productos/4.jpeg" width="50%" alt=""></div>
-                <div class="legumbres"><img src="../lista de productos/1.jpeg" width="50%" alt=""></div>
+            <div class="titulo-dsayuno">
+                <h2>DESAYUNOS</h2>
+                <p>Comienza tus mañanas con energía y sabor con nuestro box de desayuno saludable. Nuestros productos
+                    están cuidadosamente seleccionados para ofrecerte una alimentación balanceada y nutritiva. Incluimos
+                    productos orgánicos y naturales para que puedas disfrutar de un desayuno delicioso sin comprometer
+                    tu salud. En nuestro box encontrarás una variedad de opciones que se adaptan a tus necesidades y
+                    preferencias, desde cereales integrales hasta frutas frescas y frutos secos. Además, te
+                    proporcionamos ideas y sugerencias para que puedas preparar desayunos saludables y equilibrados en
+                    casa. ¡No te pierdas esta oportunidad de empezar el día con energía y bienestar! </p>
+            </div>
+            <div class="">
+                <div class="boxte"><img src="../desayuno/box-Te.jpeg" width="50%" alt=""></div>
+                <div class="caja-desa"><img src="../desayuno/WhatsApp Image 2023-04-18 at 17.44.13 (2).jpeg" width="50%" alt=""></div>
+                <div class="caja-tarje"><img src="../desayuno/WhatsApp Image 2023-04-18 at 17.44.13 (4).jpeg" width="50%" alt=""></div>
+                <div class="caja"><img src="../desayuno/WhatsApp Image 2023-04-18 at 17.44.14 (6).jpeg" width="50%" alt=""></div>
+                <div class=""><img src=".." width="50%" alt=""></div>
             </div>
 
         </main>
