--- a/pag/recetas.html
+++ b/pag/recetas.html
@@ -24,11 +24,11 @@
 
  <main class="main">
             <nav class="flex-nav">
-                <div class="home"><a href="../index.html"></a></div>
-                <div class="produc"><a href="./productos.html"> </a></div>
+                <div class="home"><a href="../index.html"></a>Home</div>
+                <div class="produc"><a href="./productos.html">Productos </a></div>
                 <div class="art"><a href="./artesanales.html">Artesanales</a></div>
-                <div class="recet"><a href="./recetas.html">Envasado</a></div>
-                <div class="natu"><a href="./naturales.html">Naturales</a></div>
+                <div class="recet"><a href="./recetas.html">Recetas</a></div>
+                <div class="natu"><a href="../pag/desayunos.html">Desayunos</a></div>
             </nav>
 
             <div class="main-receta">
