--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
         <header class="header">
             <div class="header-logo">
                 <img src="./logoPS/psano fondo naranja.png" width="100%">
-
             </div>
             <div class="header-titulo">
                 <h1>PuntoSano</h1>
                 <h2>Tienda Online de Productos Saludables</h2>
             </div>
-
         </header>
 
 
@@ -36,49 +34,34 @@
             </nav>
 
             <div class="main2">
-                <section class="">
-
-                    <div class="bienestar">
-                        <h2> Bien Estar </h2>
-                        <p>Estamos decididos a proponer un cambio en la salud de cada cliente, ofreciendo no solo
-                            productos de calidad, si no, tambien recetas para que coman rico. Creemos que la
-                            alimentacion es un granito de arena importante para el comienzo del Bien estar.</p>
-
-
-                    </div>
-
-
-                </section>
-                <section>
-                    <div class="productos">
+                <article class="main2-bienestar">
+                    <h2> Bien Estar </h2>
+                    <p>Estamos decididos a proponer un cambio en la salud de cada cliente, ofreciendo no solo
+                        productos de calidad, si no, tambien recetas para que coman rico. Creemos que la
+                        alimentacion es un granito de arena importante para el comienzo del Bien estar.</p>
+                </article>
+                <article class="main2-productos">
                         <h2>Productos</h2>
                         <p>En PuntoSano encontrarás una gran variedad de productos saludables que te ayudarán a mantener
                             un
                             estilo de vida equilibrado y lleno de vitalidad. Todos nuestros productos están
                             cuidadosamente
                             seleccionados para garantizar su calidad y frescura.</p>
+                </article>
 
-                    </div>
-                </section>
-
-                <section>
-                    <div class="recetas">
+                <article class="main2-recetas">
                         <h2>Recetas</h2>
                         <p>En PuntoSano encontrarás una gran variedad de recetas saludables y deliciosas que te ayudarán
                             a
                             mantener un estilo de vida equilibrado y lleno de energía. Todas nuestras recetas están
                             cuidadosamente seleccionadas para garantizar su calidad y sabor.</p>
-                            <h3>Te mostramos algunas</h3>
-                    </div>
-                </section>
+                        <h3>Te mostramos algunas</h3>
+                </article>
 
 
-                <div class="mermeladas"><img src="./img/img 3 mermeladas.jpeg" alt=" Mermeladas" width="50%"></div>
-                <div class="muecas"><img src="./img/img 3 muecas.jpeg" alt="Barritas de cereal MUECAS " width="50%">
-                </div>
-                <div class="secos"><img src="./img/Img frutos secos.jpeg" alt=" Frutos Secos" width="50%"></div>
-
-
+                <div class="main2-mermeladas"><img src="./img/img 3 mermeladas.jpeg" alt=" Mermeladas" width="50%"></div>
+                <div class="main2-muecas"><img src="./img/img 3 muecas.jpeg" alt="Barritas de cereal MUECAS " width="50%"> </div>
+                <div class="main2-secos"><img src="./img/Img frutos secos.jpeg" alt=" Frutos Secos" width="50%"></div>
             </div>
 
         </main>
