modificacion meta y animacion

--- a/pag/productos.html
+++ b/pag/productos.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="tenemos variedad de productos saludables no dudes en contactarnos">
     <link rel="stylesheet" href="../css/styls.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <title>PuntoSano productos sanos alimentos de dietetica</title>
 </head>
 
 <body>
@@ -16,7 +18,7 @@
                 <img src="../logoPS/logo con fondo.png" width="100%">
 
             </div>
-            <div class="header-titulo">
+            <div class="header-titulo animate__animated animate__rubberBand">
                 <h1>PuntoSano</h1>
                 <h2>Tienda Online de Productos Saludables</h2>
             </div>
@@ -32,14 +34,20 @@
                 <div class="natu"><a href="../pag/desayunos.html">Desayunos</a></div>
             </nav>
 
+
             <div class="lis-pro"> LISTA DE PRODUCTOS</div>
-            
             <div class="listado">
-                <div class="varios"><img src="../lista de productos/5.jpeg" width="50%" alt=""></div>
-                <div class="congelados"><img src="../lista de productos/2.jpeg" width="50%" alt=""></div>
-                <div class="cereales"><img src="../lista de productos/3.jpeg" width="50%" alt=""></div>
-                <div class="dulces"><img src="../lista de productos/4.jpeg" width="50%" alt=""></div>
-                <div class="legumbres"><img src="../lista de productos/1.jpeg" width="50%" alt=""></div>
+
+                <div class="varios"><img src="../lista de productos/WhatsApp Image 2023-04-18 at 15.16.41 (1).jpeg"
+                        width="50%" alt=""></div>
+                <div class="congelados"><img src="../lista de productos/WhatsApp Image 2023-04-18 at 15.16.41.jpeg"
+                        width="50%" alt=""></div>
+                <div class="cereales"><img src="../lista de productos/WhatsApp Image 2023-04-18 at 15.16.42 (1).jpeg"
+                        width="50%" alt=""></div>
+                <div class="dulces"><img src="../lista de productos/WhatsApp Image 2023-04-18 at 15.16.42 (2).jpeg"
+                        width="50%" alt=""></div>
+                <div class="legumbres"><img src="../lista de productos/WhatsApp Image 2023-04-18 at 15.16.42.jpeg"
+                        width="50%" alt=""></div>
             </div>
 
         </main>
