--- a/pag/recetas.html
+++ b/pag/recetas.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="aprende con nuestras recetas a cuidar tu cuerpo mente y alma">
     <link rel="stylesheet" href="../css/styls.css">
-    <title>PuntoSano</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <title>PuntoSano Recetas saludables </title>
 </head>
 
 <body>
@@ -15,14 +17,15 @@
             <div class="logo-recetas">
                 <img src="../logoPS/ps logo negro.png" alt="" width="50%">
             </div>
-            <div class="titulo-receta">
-                <h1 >PuntoSano</h1>
-                <h2>Tienda Online de Productos Saludables</h2></div>
-                
+            <div class="titulo-receta animate__animated animate__rubberBand">
+                <h1>PuntoSano</h1>
+                <h2>Tienda Online de Productos Saludables</h2>
+            </div>
+
 
         </header>
 
- <main class="main">
+        <main class="main">
             <nav class="flex-nav">
                 <div class="home"><a href="../index.html"></a>Home</div>
                 <div class="produc"><a href="./productos.html">Productos </a></div>
@@ -36,7 +39,8 @@
 
                     <div class="rece-salu">
                         <h2>Recetas Saludables </h2>
-                        <p>En Punto Sano, vos podes encontrar una amplia variedad de productos saludables
+                        <p class="parrafo-receta">En Punto Sano, vos podes encontrar una amplia variedad de productos
+                            saludables
                             para tu dieta, desde alimentos frescos y naturales, hasta suplementos y vitaminas. Además,
                             Punto Sano
                             ofrece Recetas saludables y sabrosas que pueden ser una excelente fuente de
@@ -56,11 +60,12 @@
                 </section>
 
                 <div class="receta-img">
-                    <div class="croqueta"><img src="../recetas/WhatsApp Image 2023-04-18 at 22.42.09 (1).jpeg" alt=""
+                    <div class="croqueta"><img src="../recetas/WhatsApp Image 2023-04-18 at 22.42.09 (1).jpeg" alt="Crpquetas de choclo y harina integral"
                             width="50%"></div>
-                    <div class="garbanzo"><img src="../recetas/WhatsApp Image 2023-04-18 at 22.42.09 (2).jpeg" alt=" "
+                    <div class="garbanzo"><img src="../recetas/WhatsApp Image 2023-04-18 at 22.42.09 (2).jpeg" alt="Garbanzos al horno "
                             width="50%"> </div>
-                    <div class="masa"><img src="../recetas/WhatsApp Image 2023-04-18 at 22.42.09.jpeg" alt="" width="50%">
+                    <div class="masa"><img src="../recetas/WhatsApp Image 2023-04-18 at 22.42.09.jpeg" alt="Masa para tartas 9 6 9 "
+                            width="50%">
                     </div>
                 </div>
 
@@ -73,8 +78,8 @@
         <footer class="footer">
             <div class="contacto-rece">
                 <h3>Contactos</h3>
-                <p>whatsAap 02216237628</p>
-                <p>instagram @PuntoSanotienda</p>
+                <p>WhatsAap 02216237628</p>
+                <p>Instagram @PuntoSanotienda</p>
                 <p>facebook PuntoSanotienda</p>
             </div>
             <div class="pagos-rece">
