--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="somos tu tienda Online, con los mejores productos saludables">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./css/styls.css">
-    <title>PuntoSano</title>
+    <title>PuntoSano tienda saludable</title>
 </head>
 
 <body>
@@ -16,7 +18,7 @@
                 <img src="./logoPS/psano fondo naranja.png" width="100%">
 
             </div>
-            <div class="header-titulo">
+            <div class="header-titulo animate__animated animate__rubberBand">
                 <h1>PuntoSano</h1>
                 <h2>Tienda Online de Productos Saludables</h2>
             </div>
@@ -68,14 +70,13 @@
                             a
                             mantener un estilo de vida equilibrado y lleno de energía. Todas nuestras recetas están
                             cuidadosamente seleccionadas para garantizar su calidad y sabor.</p>
-                            <h3>Te mostramos algunas</h3>
+                        <h3>Te mostramos algunas</h3>
                     </div>
                 </section>
 
 
                 <div class="mermeladas"><img src="./img/img 3 mermeladas.jpeg" alt=" Mermeladas" width="50%"></div>
-                <div class="muecas"><img src="./img/img 3 muecas.jpeg" alt="Barritas de cereal MUECAS " width="50%">
-                </div>
+                <div class="muecas"><img src="./img/img 3 muecas.jpeg" alt="Barritas de cereal MUECAS " width="50%"></div>
                 <div class="secos"><img src="./img/Img frutos secos.jpeg" alt=" Frutos Secos" width="50%"></div>
 
 
