--- a/pag/desayunos.html
+++ b/pag/desayunos.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="desayunos ricos y saludables para regalos especiales cuida a quien amas">
     <link rel="stylesheet" href="../css/styls.css">
-    <title>PuntoSano</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <title>PuntoSano desayunos ricos y saludables en nuestra tienda</title>
 </head>
 
 <body>
@@ -16,7 +18,7 @@
                 <img src="../logoPS/psano fondo naranja.png" width="100%">
 
             </div>
-            <div class="header-titulo">
+            <div class="header-titulo animate__animated animate__rubberBand">
                 <h1>PuntoSano</h1>
                 <h2>Tienda Online de Productos Saludables</h2>
             </div>
@@ -43,20 +45,23 @@
                     casa. ¡No te pierdas esta oportunidad de empezar el día con energía y bienestar! </p>
             </div>
             <div class="">
-                <div class="boxte"><img src="../desayuno/box-Te.jpeg" width="50%" alt=""></div>
-                <div class="caja-desa"><img src="../desayuno/WhatsApp Image 2023-04-18 at 17.44.13 (2).jpeg" width="50%" alt=""></div>
-                <div class="caja-tarje"><img src="../desayuno/WhatsApp Image 2023-04-18 at 17.44.13 (4).jpeg" width="50%" alt=""></div>
-                <div class="caja"><img src="../desayuno/WhatsApp Image 2023-04-18 at 17.44.14 (6).jpeg" width="50%" alt=""></div>
-                <div class=""><img src=".." width="50%" alt=""></div>
+                <div class="boxte"><img src="../desayuno/box-Te.jpeg" width="50%" alt="Informacion sobre lo que contiene el box"></div>
+                <div class="caja-desa"><img src="../desayuno/WhatsApp Image 2023-04-18 at 17.44.13 (2).jpeg" width="50%"
+                        alt="muestra de los productos de la caja"></div>
+                <div class="caja-tarje"><img src="../desayuno/WhatsApp Image 2023-04-18 at 17.44.13 (4).jpeg"
+                        width="50%" alt="caja armada"></div>
+                <div class="caja"><img src="../desayuno/WhatsApp Image 2023-04-18 at 17.44.14 (6).jpeg" width="50%"
+                        alt=""></div>
+                <div class=""><img src=".." width="50%" alt="caja armada"></div>
             </div>
 
         </main>
         <footer class="footer">
             <div class="contacto">
-                <h3>contactos</h3>
-                <h4>whatsAap 02216237628</h4>
-                <h4>instagram PuntoSanotienda</h4>
-                <h4>facebook PuntoSanotienda</h4>
+                <h3>Contactos</h3>
+                <h4>WhatsAap 02216237628</h4>
+                <h4>Instagram PuntoSanotienda</h4>
+                <h4>Facebook PuntoSanotienda</h4>
             </div>
             <div class="pagos">
                 <h3>Medios de Pago</h3>
