--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                             cuidadosamente seleccionadas para garantizar su calidad y sabor.</p>
                         <h3>Te mostramos algunas</h3>
                 </article>
-
-
-                <div class="main2-mermeladas"><img src="./img/img 3 mermeladas.jpeg" alt=" Mermeladas" width="50%"></div>
-                <div class="main2-muecas"><img src="./img/img 3 muecas.jpeg" alt="Barritas de cereal MUECAS " width="50%"> </div>
-                <div class="main2-secos"><img src="./img/Img frutos secos.jpeg" alt=" Frutos Secos" width="50%"></div>
-            </div>
+<section class="galeria">
+    <img src="./img/img 3 mermeladas.jpeg" alt=" Mermeladas" width="50%">
+   <img src="./img/img 3 muecas.jpeg" alt="Barritas de cereal MUECAS " width="50%"> 
+   <img src="./img/Img frutos secos.jpeg" alt=" Frutos Secos" width="50%">
+</section>
+ </div>
 
         </main>
 
