--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./scss/main.scss">
+    <link rel="stylesheet" href="./css/styls.css">
     <title>PuntoSano</title>
 </head>
 
@@ -25,62 +25,64 @@
         <main class="main">
 
 
-            <nav class="flex-nav">
-                <div class="home"><a href="./index.html"></a>Home</div>
-                <div class="art"><a href="./pag/artesanales.html">Artesanales</a></div>
-                <div class="produc"><a href="./pag/productos.html"> Productos</a></div>
-                <div class="recet"><a href="./pag/recetas.html">Recetas</a></div>
-                <div class="natu"><a href="./pag/desayunos.html">Desayunos</a></div>
+            <nav class="menu">
+                <ul class="menu-lista">
+                    <li class="menu-home"><a href="./index.html"></a>Home</li>
+                    <li class="menu-art"><a href="./pag/artesanales.html">Artesanales</a></li>
+                    <li class="menu-produc"><a href="./pag/productos.html"> Productos</a></li>
+                    <li class="menu-recet"><a href="./pag/recetas.html">Recetas</a></li>
+                    <li class="menu-natu"><a href="./pag/desayunos.html">Desayunos</a></li>
+                </ul>
             </nav>
 
-            <div class="main2">
-                <article class="main2-bienestar">
+            <div class="pilares">
+                <article class="pilares-bienestar">
                     <h2> Bien Estar </h2>
                     <p>Estamos decididos a proponer un cambio en la salud de cada cliente, ofreciendo no solo
                         productos de calidad, si no, tambien recetas para que coman rico. Creemos que la
                         alimentacion es un granito de arena importante para el comienzo del Bien estar.</p>
                 </article>
-                <article class="main2-productos">
-                        <h2>Productos</h2>
-                        <p>En PuntoSano encontrarás una gran variedad de productos saludables que te ayudarán a mantener
-                            un
-                            estilo de vida equilibrado y lleno de vitalidad. Todos nuestros productos están
-                            cuidadosamente
-                            seleccionados para garantizar su calidad y frescura.</p>
+                <article class="pilares-productos">
+                    <h2>Productos</h2>
+                    <p>En PuntoSano encontrarás una gran variedad de productos saludables que te ayudarán a mantener
+                        un
+                        estilo de vida equilibrado y lleno de vitalidad. Todos nuestros productos están
+                        cuidadosamente
+                        seleccionados para garantizar su calidad y frescura.</p>
                 </article>
 
-                <article class="main2-recetas">
-                        <h2>Recetas</h2>
-                        <p>En PuntoSano encontrarás una gran variedad de recetas saludables y deliciosas que te ayudarán
-                            a
-                            mantener un estilo de vida equilibrado y lleno de energía. Todas nuestras recetas están
-                            cuidadosamente seleccionadas para garantizar su calidad y sabor.</p>
-                        <h3>Te mostramos algunas</h3>
+                <article class="pilares-recetas">
+                    <h2>Recetas</h2>
+                    <p>En PuntoSano encontrarás una gran variedad de recetas saludables y deliciosas que te ayudarán
+                        a
+                        mantener un estilo de vida equilibrado y lleno de energía. Todas nuestras recetas están
+                        cuidadosamente seleccionadas para garantizar su calidad y sabor.</p>
+                    
                 </article>
-<section class="galeria">
-    <img src="./img/img 3 mermeladas.jpeg" alt=" Mermeladas" width="50%">
-   <img src="./img/img 3 muecas.jpeg" alt="Barritas de cereal MUECAS " width="50%"> 
-   <img src="./img/Img frutos secos.jpeg" alt=" Frutos Secos" width="50%">
-</section>
- </div>
+                <section class="pilares-galeria">
+                    <img src="./img/img 3 mermeladas.jpeg" alt=" Mermeladas" width="50%">
+                    <img src="./img/img 3 muecas.jpeg" alt="Barritas de cereal MUECAS " width="50%">
+                    <img src="./img/Img frutos secos.jpeg" alt=" Frutos Secos" width="50%">
+                </section>
+            </div>
 
         </main>
 
 
         <footer class="footer">
-            <div class="contacto">
-                <h3>Contactos</h3>
+            <div class="footer-contacto">
+                <h3 >Contactos</h3>
                 <p>whatsAap 02216237628</p>
                 <p>instagram @PuntoSanotienda</p>
                 <p>facebook PuntoSanotienda</p>
             </div>
-            <div class="pagos">
+            <div class=" footer-pagos">
                 <h3>Medios de Pagos</h3>
                 <p> -Transferencia/Efectivo 10% de DESCUENTO</p>
                 <p>-Tarjeta de credito hasta 3 cuotas sin interes</p>
                 <p>-Debito</p>
             </div>
-            <div class="mapa">
+            <div class="footer-mapa">
                 <figure><iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52343.07030763407!2d-57.98818985717279!3d-34.92045289881356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e62b1f0085a1%3A0xbcfc44f0547312e3!2sLa%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1679170383415!5m2!1ses!2sar"
                         width="150" height="150" style="border: 10px;;" allowfullscreen="" loading="lazy"
