--- a/pag/artesanales.html
+++ b/pag/artesanales.html
@@ -25,13 +25,15 @@
 
 
         <main class="main">
-            <nav class="flex-nav">
+            <nav class="menu">
 
-                <div class="home"><a href="../index.html">Home</a></div>
-                <div class="art"><a href="./artesanales.html"></a>Artesanales</div>
-                <div class="produc"><a href="./productos.html"> Productos</a></div>
-                <div class="recet"><a href="./recetas.html">Recetas</a></div>
-                <div class="natu"><a href="../pag/desayunos.html">Desayunos</a></div>
+               <ul class="menu-lista">
+                 <li class="home"><a href="../index.html">Home</a></li>
+                <li class="art"><a href="./artesanales.html"></a>Artesanales</li>
+                <li class="produc"><a href="./productos.html"> Productos</a></li>
+                <li class="recet"><a href="./recetas.html">Recetas</a></li>
+                <li class="natu"><a href="../pag/desayunos.html">Desayunos</a></li>
+            </ul>
             </nav>
             <div class="main-art">
                 <section>
