reminamos modificaciones en productos

--- a/pag/recetas.html
+++ b/pag/recetas.html
@@ -12,57 +12,62 @@
 <body>
     <div class="grilla-receta">
         <header class="header-titulo">
-            <div class="logo-recetas">
+            <div class="header-logo">
                 <img src="../logoPS/ps logo negro.png" alt="" width="50%">
             </div>
-            <div class="titulo-receta">
-                <h1 >PuntoSano</h1>
-                <h2>Tienda Online de Productos Saludables</h2></div>
-                
+            <div class="header-titulo">
+                <h1>PuntoSano</h1>
+                <h2>Tienda Online de Productos Saludables</h2>
+            </div>
+
 
         </header>
 
- <main class="main">
-            <nav class="flex-nav">
-                <div class="home"><a href="../index.html"></a>Home</div>
-                <div class="produc"><a href="./productos.html">Productos </a></div>
-                <div class="art"><a href="./artesanales.html">Artesanales</a></div>
-                <div class="recet"><a href="./recetas.html">Recetas</a></div>
-                <div class="natu"><a href="../pag/desayunos.html">Desayunos</a></div>
+        <main class="main">
+            <nav class="menu">
+                <ul>
+                    <li class="home"><a href="../index.html"></a>Home</li>
+                    <li class="produc"><a href="./productos.html">Productos </a></li>
+                    <li class="art"><a href="./artesanales.html">Artesanales</a></li>
+                    <li class="recet"><a href="./recetas.html">Recetas</a></li>
+                    <li class="natu"><a href="../pag/desayunos.html">Desayunos</a></li>
+                </ul>
+
             </nav>
 
             <div class="main-receta">
-                <section class="">
 
-                    <div class="rece-salu">
-                        <h2>Recetas Saludables </h2>
-                        <p>En Punto Sano, vos podes encontrar una amplia variedad de productos saludables
-                            para tu dieta, desde alimentos frescos y naturales, hasta suplementos y vitaminas. Además,
-                            Punto Sano
-                            ofrece Recetas saludables y sabrosas que pueden ser una excelente fuente de
-                            inspiración para aquellos que buscan incorporar opciones más saludables a su dieta y
-                            mantener un estilo de vida equilibrado y lleno de energía. Todas nuestras recetas están
-                            cuidadosamente seleccionadas para garantizar su calidad y sabor.
-                            Las recetas de Punto Sano están diseñadas para ser fáciles de seguir y están
-                            hechas con ingredientes que se pueden encontrar fácilmente en cualquier tienda de alimentos
-                            saludables. También pueden ser adaptadas a diferentes necesidades dietéticas, ya sea que
-                            alguien sea vegano, vegetariano o tenga alergias alimentarias. Eleji la que mas te gusta!!!
-                        </p>
 
-                        <h3>Te mostramos algunas</h3>
-                    </div>
+                <article class="descriocion-recetas">
+                    <h2>Recetas Saludables </h2>
+                    <p>En Punto Sano, vos podes encontrar una amplia variedad de productos saludables
+                        para tu dieta, desde alimentos frescos y naturales, hasta suplementos y vitaminas. Además,
+                        Punto Sano
+                        ofrece Recetas saludables y sabrosas que pueden ser una excelente fuente de
+                        inspiración para aquellos que buscan incorporar opciones más saludables a su dieta y
+                        mantener un estilo de vida equilibrado y lleno de energía. Todas nuestras recetas están
+                        cuidadosamente seleccionadas para garantizar su calidad y sabor.
+                        Las recetas de Punto Sano están diseñadas para ser fáciles de seguir y están
+                        hechas con ingredientes que se pueden encontrar fácilmente en cualquier tienda de alimentos
+                        saludables. También pueden ser adaptadas a diferentes necesidades dietéticas, ya sea que
+                        alguien sea vegano, vegetariano o tenga alergias alimentarias. Eleji la que mas te gusta!!!
+                    </p>
 
+                    <h3>Te mostramos algunas</h3>
+                </article>
+
+
+
+
+                <section class="galeria-recetas">
+
+                    <img class="croqueta" src="../recetas/WhatsApp Image 2023-04-18 at 22.42.09 (1).jpeg" alt=""
+                        width="50%">
+                    <img class="garbanzo" src="../recetas/WhatsApp Image 2023-04-18 at 22.42.09 (2).jpeg" alt=" "
+                        width="50%">
+                    <img class="masa" src="../recetas/WhatsApp Image 2023-04-18 at 22.42.09.jpeg" alt="" width="50%">
 
                 </section>
-
-                <div class="receta-img">
-                    <div class="croqueta"><img src="../recetas/WhatsApp Image 2023-04-18 at 22.42.09 (1).jpeg" alt=""
-                            width="50%"></div>
-                    <div class="garbanzo"><img src="../recetas/WhatsApp Image 2023-04-18 at 22.42.09 (2).jpeg" alt=" "
-                            width="50%"> </div>
-                    <div class="masa"><img src="../recetas/WhatsApp Image 2023-04-18 at 22.42.09.jpeg" alt="" width="50%">
-                    </div>
-                </div>
 
 
             </div>
