se agrego etiqueta meta description

--- a/pag/productos.html
+++ b/pag/productos.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="todos los productos saludables de dieteticas ricos y baratos">
     <link rel="stylesheet" href="../css/styls.css">
     <title>lista de Productos en Punto Sano</title>
 </head>
