--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="la mejor tienda de productos saludable PuntoSano dietetica">
     <link rel="stylesheet" href="./css/styls.css">
-    <title>PuntoSano</title>
+    <title>PuntoSano tienda saludable dietetica</title>
 </head>
 
 <body>
