--- a/pag/artesanales.html
+++ b/pag/artesanales.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="productos artesanales ricos saludables baratos ">
     <link rel="stylesheet" href="../css/styls.css">
     <title>Artesanales</title>
 </head>
