--- a/pag/recetas.html
+++ b/pag/recetas.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="las mejores recetas saludables ricas faciles">
     <link rel="stylesheet" href="../css/styls.css">
     <title>PuntoSano Recesa saludables</title>
 </head>
